--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,26 @@
-Flask==2.0.1
+# CARP API
+carp-python-api==1.0.8
+# Flask Dependencies
+Flask~=2.0.2
 flask-restplus==0.13.0
-setuptools==57.4.0
+setuptools~=57.2.0
 requests==2.26.0
 api~=0.0.7
-pandas==1.3.2
-certifi==2021.5.30
+pandas==1.3.3
+certifi==2021.10.8
 chardet~=4.0.0
-idna~=2.10
+idna==3.3
 urllib3~=1.26.3
 utils~=1.0.1
 numpy==1.21.2
 pip~=21.0
 argparse~=1.4.0
-wheel~=0.36.2
+wheel==0.37.0
 lxml~=4.6.2
 Jinja2~=3.0.1
-Werkzeug==2.0.1
+Werkzeug==2.0.2
 itsdangerous~=2.0.1
-Click==8.0.1
+Click==8.0.3
 MyApplication~=0.1.0
 MarkupSafe~=2.0.1
 matplotlib~=3.4.2
@@ -25,6 +28,38 @@ svglib==1.1.0
 seaborn~=0.11.1
 psutil~=5.8.0
 blinker~=1.4
-slack_sdk==3.10.1
-# CARP API
-carp-python-api~=1.0.6
+slack_sdk==3.11.2
+# Flask Test Dependencies
+keyring~=23.2.1
+docutils~=0.17.1
+Pillow~=8.3.2
+attrs~=21.2.0
+mock~=4.0.3
+nose~=1.3.7
+pytz~=2021.3
+tqdm~=4.62.3
+colorama~=0.4.4
+decorator~=5.1.0
+scipy~=1.7.1
+twine~=3.4.2
+rfc3986~=1.5.0
+pkginfo~=1.7.1
+six~=1.16.0
+webencodings~=0.5.1
+packaging~=21.0
+bleach~=4.1.0
+python-dateutil~=2.8.1
+clepy~=0.3.23
+cycler~=0.10.0
+Pygments~=2.10.0
+aniso8601~=9.0.1
+pyparsing~=2.4.7
+jsonschema==4.1.0
+pyrsistent~=0.18.0
+kiwisolver~=1.3.1
+ujson~=4.2.0
+python-multipart~=0.0.5
+zipp~=3.6.0
+loguru~=0.5.3
+build~=0.7.0
+starlette~=0.16.0
