--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ carp-python-api==1.0.9
 # Flask Dependencies
 Flask~=2.0.2
 flask-restplus==0.13.0
-setuptools==58.2.0
+setuptools~=58.2.0
 requests==2.26.0
 api~=0.0.7
 pandas==1.3.4
@@ -12,7 +12,7 @@ chardet~=4.0.0
 idna==3.3
 urllib3~=1.26.3
 utils~=1.0.1
-numpy==1.21.2
+numpy==1.21.4
 pip~=21.0
 argparse~=1.4.0
 wheel==0.37.0
@@ -23,7 +23,7 @@ itsdangerous~=2.0.1
 Click==8.0.3
 MyApplication~=0.1.0
 MarkupSafe~=2.0.1
-matplotlib~=3.4.2
+matplotlib==3.5.0
 svglib==1.1.0
 seaborn~=0.11.1
 psutil~=5.8.0
@@ -31,7 +31,7 @@ blinker~=1.4
 slack_sdk==3.11.2
 # Flask Test Dependencies
 keyring~=23.2.1
-docutils~=0.17.1
+docutils==0.18
 Pillow==8.4.0
 attrs~=21.2.0
 mock~=4.0.3
@@ -41,20 +41,20 @@ tqdm~=4.62.3
 colorama~=0.4.4
 decorator~=5.1.0
 scipy~=1.7.1
-twine~=3.4.2
+twine==3.6.0
 rfc3986~=1.5.0
-pkginfo~=1.7.1
+pkginfo==1.8.1
 six~=1.16.0
 webencodings~=0.5.1
 packaging~=21.0
 bleach~=4.1.0
 python-dateutil~=2.8.1
 clepy~=0.3.23
-cycler~=0.10.0
+cycler==0.11.0
 Pygments~=2.10.0
 aniso8601~=9.0.1
-pyparsing~=2.4.7
-jsonschema==4.1.0
+pyparsing==3.0.6
+jsonschema==4.2.1
 pyrsistent~=0.18.0
 kiwisolver~=1.3.1
 ujson~=4.2.0
@@ -62,4 +62,4 @@ python-multipart~=0.0.5
 zipp~=3.6.0
 loguru~=0.5.3
 build~=0.7.0
-starlette~=0.16.0
+starlette==0.17.1
